# rdflow

./: LICENSE  README.md
dataflow/: Cargo.toml  README.md
dataflow/crates/core/: Cargo.toml
dataflow/crates/core/src/: block.rs  lib.rs  reflect.rs  system.rs  writer.rs
dataflow/crates/macroexpansion-test/: Cargo.toml
dataflow/crates/macroexpansion-test/src/: main.rs
dataflow/crates/macros/: Cargo.toml
dataflow/crates/macros/src/: block.rs  lib.rs  parsers.rs  system.rs  types.rs  utils.rs
dataflow/crates/reflect/: Cargo.toml
dataflow/crates/reflect/src/: block.rs  lib.rs  system.rs
dataflow/doc/: scratch.rs
dataflow/src/: block.rs  component_library.rs  const_fns.rs  examples.rs  lib.rs  main.rs  system.rs
dataflow/src/block_library/: converter_b2f.rs  hysteresis.rs  mod.rs  thermal_mass.rs
dataflow/src/component_library/: hysteresis.rs
dataflow/src/examples/: temperature_controller.rs
dataflow/tests/macro-tests/: test1.rs
