[package]
name = "dataflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-default = "1.0.0"
const-default-derive = "*"
dataflow-macros = { path = "crates/macros" }
dataflow-core = {path = "crates/core"}

[[test]]
name = "macro-tests"
path = "tests/macro-tests/test1.rs"